--- a/build.properties
+++ b/build.properties
@@ -15,6 +15,5 @@ jsr308-langtools=${read-checker.basedir}/../jsr308-langtools
 # Read Checker build & test needs below external libraries
 javac.lib=${jsr308-langtools}/dist/lib/javac.jar
 framework.lib=${checker-framework}/framework/dist/framework.jar
-junit.lib=${checker-framework}/util/lib/junit-4.12.jar
+junit.lib=${read-checker.basedir}/testlib/junit-4.12.jar
 hamcrest.lib=${read-checker.basedir}/testlib/hamcrest-core-1.3.jar
-
